tests/ui/impl-trait/unsize_slice.stderr
error[E0308]: mismatched types
  --> $DIR/unsize_slice.rs:6:25
   |
LL | fn hello() -> [impl Sized; 2] {
   |                ---------- the found opaque type
...
LL |         let _: &[i32] = &x;
   |                ------   ^^ expected `&[i32]`, found `&[impl Sized; 2]`
   |                |
   |                expected due to this
   |
   = note: expected reference `&[i32]`
              found reference `&[impl Sized; 2]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
